# Uni

./: README.MD
Term2/asm/(m)asm1/: metod.docx
Term2/asm/(m)asm2/masm2.2/: Лабораторная работа 2 (часть 2).docx
Term2/asm/(n)asm3/src/: lab31.asm
Term2/asm/masm1/: lab1.docx  Сержик.docx
Term2/asm/masm2/masm21/: Лабораторная работа 2 (часть 1).docx
Term2/c/: Нартов.docx
Term2/c/laba1/: otch1.md  task1.docx
Term2/c/laba1/src/: laba1.c  laba11.c  (+4 more)
Term2/c/laba2/: .~lock.task.docx#  lab2c.docx  Задание к лабораторной работе № 8 части 1 и 2.docx
Term2/c/laba3/: .~lock.task3.pdf#  .~lock.Задание для лабораторной работы по теме Функции (1).docx#  graph_data.txt
Term2/c/laba4/: .~lock.task.docx#  task.docx
Term2/c/laba5/: .~lock.sorttask.doc#  sorttask.doc
Term2/c/laba6/: .~lock.task.docx#  psg  task.docx
Term2/info/: shablon.docx
Term2/info/exm/: task
Term2/info/laba1/: laba1  laba11.c  laba12  laba12.c  laba5.docx  otchet.md
Term2/info/laba3/: Задания массивы с Литкода.docx
Term2/plus/: shabl.docx
Term2/plus/laba2/: .~lock.ПрогрС++ЛабРаб2.docx#  ПрогрС++ЛабРаб2.docx
Term2/plus/laba3/: ПрогрС++ЛабРаб3.docx
Term2/plus/laba4/: .~lock.task.docx#  task.docx
Term2/plus/laba4/src/: CMakeLists.txt  classes.cpp  classes.hpp  drawfns.hpp  funcs.cpp  main.cpp  settings.hpp
Term2/plus/laba4/src/cls/: classes.cpp  classes.hpp
Term2/plus/laba4/src/fn/: funcs.cpp
Term2/plus/laba4/src/incls/: classes.cpp
Term2/plus/laba4/src/outofcont/: exe  heroteam  overr.cpp  task4.cpp
Term2/progr/laba1/: otchet.md  shabl.docx
Term2/story/: Nartov.pptx
(+105 files in other folders)
